--- a/Profile_Card/index.html
+++ b/Profile_Card/index.html
@@ -17,6 +17,31 @@
 		<div class = "image">
 			<img src="profile-image.jpg" alt="" class = "card-img">
 		</div>
+
+	<div class="text-data">
+		<span class="name">Sneha Bansal</span>
+		<span class="job">Software Enginner</span>
+	</div>
+
+	<div class="media-buttons">
+		<a href="#"  class="link">
+		<i class='bx bxl-facebook-circle' style='color:#c31788' ></i>
+		</a>
+		<a href="#" class="link">
+			<i class='bx bxl-instagram-alt' style='color:#c11887'  ></i>
+		</a>
+		<a href="#" class="link">
+			<i class='bx bxl-linkedin-square' style='color:#c11887' ></i>
+		</a>
+		<a href="#" class="link">
+			<i class='bx bxl-twitter' style='color:#c31788'  ></i>
+		</a>
+	</div>
+
+	<div class="buttons">
+		<button class="button">Connect</button>
+		<button class="button">Message</button>
+	</div>
 	</div>
 </body>
 </html>
